Second Commit Test

--- a/index.html
+++ b/index.html
@@ -1,10 +1,27 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Simple App</title>
+		<title>Master Cook</title>
+		<script src="JS/zepto.min.js"></script>
+		<link href="CSS/style.css" rel="stylesheet" type="text/css">
 	</head>
 	<body>
-		<h1> Hello World! </h1>
+		<div id="container">
+			<header><h1>Master Cook</h1></header>
+			
+			<div id="search">
+				<h3>Start Cooking...</h3>
+				<input type="search" name="recipieSearch" id="rs" placeholder="Recipies" /><button class="plus">+</button>
+			</div>
+			<footer>
+				<ul class="tab">
+					<li><button>Tab</button></li>
+					<li><button>Tab</button></li>
+					<li><button>Tab</button></li>
+			</footer>
+		</div>
+		
+		
 	</body>
 
 </html>
