--- a/index.html
+++ b/index.html
@@ -1,27 +1,63 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Master Cook</title>
-		<script src="JS/zepto.min.js"></script>
-		<link href="CSS/style.css" rel="stylesheet" type="text/css">
-	</head>
-	<body>
-		<div id="container">
-			<header><h1>Master Cook</h1></header>
-			
-			<div id="search">
-				<h3>Start Cooking...</h3>
-				<input type="search" name="recipieSearch" id="rs" placeholder="Recipies" /><button class="plus">+</button>
-			</div>
-			<footer>
-				<ul class="tab">
-					<li><button>Tab</button></li>
-					<li><button>Tab</button></li>
-					<li><button>Tab</button></li>
-			</footer>
-		</div>
-		
-		
-	</body>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <title></title>
+  
+  
+  
+  <link rel="stylesheet" href="CSS/jquery.mobile-1.3.1.min.css">
+  
 
+  
+  <!-- jQuery and jQuery Mobile -->
+  <script src="JS/jquery-1.9.1.min.js"></script>
+  <script src="JS/jquery.mobile-1.3.1.min.js"></script>
+
+  <!-- Extra Codiqa features -->
+  <script src="JS/codiqa.ext.js"></script>
+   
+</head>
+<body>
+<!-- Home -->
+<div data-role="page" id="page1">
+    <div data-theme="a" data-role="header">
+        <h1>
+            Master Cook
+        </h1>
+    </div>
+    <div data-role="content">
+        <div data-role="fieldcontain" class="search">
+            <label for="searchinput1">
+                Start Cooking
+            </label>
+            <input name="" id="searchinput1" placeholder="Recipies..." value="" type="search">
+        </div>
+    </div>
+    <div data-theme="a" data-role="footer" data-position="fixed">
+        <div data-role="navbar" data-iconpos="top">
+            <ul>
+                <li>
+                    <a href="#page1" data-transition="fade" data-theme="" data-icon="">
+                        Button
+                    </a>
+                </li>
+                <li>
+                    <a href="#page1" data-transition="fade" data-theme="" data-icon="">
+                        Button
+                    </a>
+                </li>
+                <li>
+                    <a href="#page1" data-transition="fade" data-theme="" data-icon="">
+                        Button
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</div>
+</body>
 </html>
